crates/weft-snapshots/tests/snapshots/swiftui/corpus-showroom.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-showroom as swiftui
---
// Generated by `weft swiftui` from the Weft screen "showroom".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import ImageIO
import Observation
import RealityKit
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class ShowroomModel {
    var caption: String = ""
}

/// The host actions the screen names.
enum ShowroomAction: String, CaseIterable, Sendable {
    case gemPick = "gem.pick"
}

/// What the host receives when the screen fires an action.
struct ShowroomEvent: Sendable, Equatable {
    var action: ShowroomAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses.
struct ShowroomTheme: Sendable {
    var space = SpaceTokens()

    struct SpaceTokens: Sendable {
        var lg: CGFloat = 24
    }
}

struct ShowroomScreen: View {
    @Bindable var model: ShowroomModel
    var theme = ShowroomTheme()
    var perform: (ShowroomEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Text("Showroom")
                .font(.largeTitle)
                .accessibilityHeading(.h1)
                .accessibilityAddTraits(.isHeader)
                .accessibilityIdentifier("title")
            VStack(spacing: theme.space.lg) {
                Section {
                    WeftModel(usdz: "assets/gem.usdz", fallback: "assets/gem.png")
                        .weftProp("src", "assets/gem.glb")
                        .accessibilityLabel("A teal gem with eight triangular faces")
                        .accessibilityIdentifier("gem")
                    Text(model.caption)
                        .accessibilityIdentifier("gem-caption")
                    Button {
                        send(.gemPick, "gem-pick")
                    } label: {
                        Text("Choose this gem")
                    }
                    .buttonStyle(.borderedProminent)
                    .accessibilityIdentifier("gem-pick")
                } header: {
                    Text("Gem")
                        .font(.title)
                        .accessibilityHeading(.h2)
                        .accessibilityAddTraits(.isHeader)
                        .accessibilityIdentifier("gem-title")
                }
                .accessibilityElement(children: .contain)
                .accessibilityLabel("Gem")
                .accessibilityIdentifier("gem-section")
                Section {
                    WeftModel(fallback: "assets/gem.png")
                        .weftProp("src", "assets/gem.glb")
                        .rotation3DEffect(.degrees(20), axis: (x: 0, y: 1, z: 0), perspective: 400 / 800)
                        .accessibilityLabel("The same gem turned to its side")
                        .accessibilityIdentifier("turned")
                    Text("Without a USDZ file Apple platforms show the still image.")
                        .accessibilityIdentifier("turned-caption")
                } header: {
                    Text("Turned")
                        .font(.title)
                        .accessibilityHeading(.h2)
                        .accessibilityAddTraits(.isHeader)
                        .accessibilityIdentifier("turned-title")
                }
                .accessibilityElement(children: .contain)
                .accessibilityLabel("Turned gem")
                .accessibilityIdentifier("turned-section")
            }
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("shelf")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Showroom")
        .accessibilityIdentifier("showroom")
    }

    private func send(_ action: ShowroomAction, _ id: String, item: String? = nil) {
        perform(ShowroomEvent(action: action, id: id, item: item))
    }
}

#Preview {
    ShowroomScreen(model: ShowroomModel())
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Reads and shows a date-picker's text in UTC: the text is a calendar date, not an instant.
    func weftUTC() -> some View { environment(\.timeZone, TimeZone(secondsFromGMT: 0) ?? .current) }
    /// Marks the text field and option menu beside it as one Weft combobox.
    func weftCombobox() -> some View { self }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText(_ v: Double) -> String {
    v.isFinite && v == v.rounded() && abs(v) < 1e15 ? String(Int(v)) : String(v)
}
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt(_ v: Double) -> Int { v.isFinite && abs(v) < 1e15 ? Int(v.rounded()) : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
// Only plain decimal text is a number; `0x10`, `inf` and `nan` are data that does not fit.
fileprivate func weftDouble(_ v: String) -> Double {
    let t = v.trimmingCharacters(in: .whitespaces)
    guard !t.contains(where: { "xX".contains($0) }), let d = Double(t), d.isFinite else { return 0 }
    return d
}
fileprivate func weftDouble(_ v: Bool) -> Double { v ? 1 : 0 }
fileprivate func weftDouble<T>(_ v: T) -> Double { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}

// The number controls. A `ClosedRange` traps when its bounds are reversed, so every range a
// document can set goes through these, which apply the reference renderer's rules.
fileprivate func weftRange(_ lo: Double?, _ hi: Double?) -> ClosedRange<Double> {
    let low = lo.flatMap { $0.isFinite ? $0 : nil } ?? 0
    let high = hi.flatMap { $0.isFinite ? $0 : nil } ?? 100
    return low...max(high, low)
}
fileprivate func weftBounds(_ lo: Double?, _ hi: Double?) -> ClosedRange<Double> {
    let low = lo.flatMap { $0.isFinite ? $0 : nil } ?? -Double.greatestFiniteMagnitude
    let high = hi.flatMap { $0.isFinite ? $0 : nil } ?? Double.greatestFiniteMagnitude
    return low...max(high, low)
}
fileprivate func weftStep(_ s: Double?) -> Double { s.flatMap { $0.isFinite && $0 > 0 ? $0 : nil } ?? 1 }

// A date-picker's value is text in a fixed format (SPEC §5.1); SwiftUI wants a `Date`. Text that
// is not exactly a date of that format reads as the epoch, because `DatePicker` cannot be blank.
fileprivate func weftFormatter(_ type: String) -> DateFormatter {
    let f = DateFormatter()
    f.locale = Locale(identifier: "en_US_POSIX")
    f.timeZone = TimeZone(secondsFromGMT: 0)
    switch type {
    case "time": f.dateFormat = "HH:mm"
    case "datetime": f.dateFormat = "yyyy-MM-dd'T'HH:mm"
    default: f.dateFormat = "yyyy-MM-dd"
    }
    return f
}
fileprivate func weftDate(_ text: Binding<String>, _ type: String = "date") -> Binding<Date> {
    Binding(
        get: {
            let f = weftFormatter(type)
            let t = text.wrappedValue
            // The parser accepts `2025-1-5`; Weft's format has fixed widths.
            guard let d = f.date(from: t), f.string(from: d) == t else { return Date(timeIntervalSince1970: 0) }
            return d
        },
        set: { text.wrappedValue = weftFormatter(type).string(from: $0) }
    )
}
fileprivate func weftDates(_ lo: String, _ hi: String, _ type: String = "date") -> ClosedRange<Date> {
    let f = weftFormatter(type)
    let low = f.date(from: lo) ?? .distantPast
    let high = f.date(from: hi) ?? .distantFuture
    return low...max(high, low)
}
fileprivate func weftComponents(_ type: String) -> DatePickerComponents {
    switch type { case "time": [.hourAndMinute]; case "datetime": [.date, .hourAndMinute]; default: [.date] }
}

// A color-picker's value is `#rrggbb` text; anything else shows black.
fileprivate func weftColor(_ hex: Binding<String>) -> Binding<Color> {
    Binding(
        get: {
            let s = hex.wrappedValue
            let digits = s.hasPrefix("#") ? String(s.dropFirst()) : ""
            guard digits.count == 6, digits.allSatisfy(\.isHexDigit), let n = UInt32(digits, radix: 16) else { return .black }
            return Color(.sRGB, red: Double((n >> 16) & 255) / 255, green: Double((n >> 8) & 255) / 255, blue: Double(n & 255) / 255, opacity: 1)
        },
        set: { hex.wrappedValue = weftHex($0) }
    )
}
fileprivate func weftHex(_ c: Color) -> String {
    // Through Core Graphics, not UIKit or AppKit, so the one helper serves every platform.
    let space = CGColorSpace(name: CGColorSpace.sRGB)
    let parts = space.flatMap { c.cgColor?.converted(to: $0, intent: .defaultIntent, options: nil) }?.components ?? []
    func byte(_ i: Int) -> Int { i < parts.count ? Int((min(max(Double(parts[i]), 0), 1) * 255).rounded()) : 0 }
    return String(format: "#%02x%02x%02x", byte(0), byte(1), byte(2))
}

// MARK: - Weft 3D model
// The `model` element (SPEC §9): the bundled USDZ file where the platform can show one, the still
// image while it loads, where it cannot, and whenever the process sets `WEFT_STILL_MODELS`, which
// the screenshot host does so that images are deterministic. Paths are the document's literals:
// a file name in the app bundle, or an `https` URL that only the still can use.

fileprivate struct WeftModel: View {
    var usdz: String? = nil
    var fallback: String

    var body: some View {
        ZStack {
            weftStill(fallback)
            if ProcessInfo.processInfo.environment["WEFT_STILL_MODELS"] == nil,
               let usdz, let url = weftBundled(usdz) {
                weftLive(url)
            }
        }
        .aspectRatio(4.0 / 3.0, contentMode: .fit)
        .accessibilityElement(children: .ignore)
        .accessibilityAddTraits(.isImage)
    }
}

@ViewBuilder
fileprivate func weftLive(_ url: URL) -> some View {
    #if os(visionOS)
    Model3D(url: url)
    #else
    if #available(iOS 18, macOS 15, *) {
        WeftRealityModel(url: url)
    }
    #endif
}

#if !os(visionOS)
@available(iOS 18, macOS 15, *)
fileprivate struct WeftRealityModel: View {
    let url: URL

    var body: some View {
        RealityView { content in
            content.camera = .virtual
            if let entity = try? await Entity(contentsOf: url) { content.add(entity) }
        }
    }
}
#endif

fileprivate func weftBundled(_ path: String) -> URL? {
    guard URL(string: path)?.scheme == nil else { return nil }
    let name = (path as NSString).lastPathComponent as NSString
    return Bundle.main.url(forResource: name.deletingPathExtension, withExtension: name.pathExtension)
}

@ViewBuilder
fileprivate func weftStill(_ path: String) -> some View {
    if let url = URL(string: path), url.scheme?.lowercased() == "https" {
        AsyncImage(url: url) { $0.resizable().scaledToFit() } placeholder: { Color.clear }
    } else if let url = weftBundled(path), let source = CGImageSourceCreateWithURL(url as CFURL, nil),
              let image = CGImageSourceCreateImageAtIndex(source, 0, nil) {
        Image(decorative: image, scale: 1).resizable().scaledToFit()
    } else {
        Color.clear
    }
}
