crates/weft-snapshots/tests/snapshots/swiftui/corpus-signup.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-signup as swiftui
---
// Generated by `weft swiftui` from the Weft screen "signup".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class SignupModel {
    var name: String = ""
    var email: String = ""
    var password: String = ""
    var confirm: String = ""
    var acceptTerms: Bool = false
}

/// The host actions the screen names.
enum SignupAction: String, CaseIterable, Sendable {
    case authSignup = "auth.signup"
    case navSignin = "nav.signin"
}

/// What the host receives when the screen fires an action.
struct SignupEvent: Sendable, Equatable {
    var action: SignupAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses, in points.
struct SignupTheme: Sendable {
    var space = Space()

    struct Space: Sendable {
        var md: CGFloat = 16
    }
}

struct SignupScreen: View {
    @Bindable var model: SignupModel
    var theme = SignupTheme()
    var perform: (SignupEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Form {
                Section {
                    Text("Create your account")
                        .font(.largeTitle)
                        .accessibilityHeading(.h1)
                        .accessibilityAddTraits(.isHeader)
                        .accessibilityIdentifier("title")
                    VStack(spacing: theme.space.md) {
                        TextField("Full name", text: $model.name)
                            .weftProp("required", true)
                            .accessibilityIdentifier("name")
                        TextField("Email", text: $model.email)
                            .weftFieldType("email")
                            .weftProp("required", true)
                            .accessibilityIdentifier("email")
                        SecureField("Password", text: $model.password)
                            .weftProp("required", true)
                            .accessibilityIdentifier("password")
                        SecureField("Confirm password", text: $model.confirm)
                            .weftProp("required", true)
                            .accessibilityIdentifier("confirm")
                        Toggle("I accept the terms of service", isOn: $model.acceptTerms)
                            .toggleStyle(WeftCheckboxStyle())
                            .accessibilityIdentifier("terms")
                    }
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("fields")
                    Button {
                        submit("form")
                    } label: {
                        Text("Create account")
                    }
                    .buttonStyle(.borderedProminent)
                    .disabled(!model.acceptTerms)
                    .accessibilityIdentifier("submit")
                } footer: {
                    Button {
                        send(.navSignin, "signin")
                    } label: {
                        Text("Already have an account? Sign in")
                    }
                    .buttonStyle(.borderless)
                    .accessibilityRemoveTraits(.isButton)
                    .accessibilityAddTraits(.isLink)
                    .accessibilityIdentifier("signin")
                }
            }
            .onSubmit { send(.authSignup, "form") }
            .weftProp("state", "idle")
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("form")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Create account")
        .accessibilityIdentifier("signup")
    }

    private func send(_ action: SignupAction, _ id: String, item: String? = nil) {
        perform(SignupEvent(action: action, id: id, item: item))
    }

    /// A submit button fires its form's submit action.
    private func submit(_ form: String) {
        switch form {
        case "form": send(.authSignup, "form")
        default: break
        }
    }
}

#Preview {
    SignupScreen(model: SignupModel())
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}
