crates/weft-snapshots/tests/snapshots/swiftui/corpus-tabs.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-tabs as swiftui
---
// Generated by `weft swiftui` from the Weft screen "account".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class AccountModel {
    var account: AccountData = AccountData()
    var billing: BillingData = BillingData()
    var team: [TeamItemData] = []

    struct AccountData: Hashable, Sendable {
        var name: String = ""
        var email: String = ""
    }

    struct BillingData: Hashable, Sendable {
        var plan: String = ""
    }

    struct TeamItemData: Hashable, Sendable {
        var name: String = ""
    }
}

/// The host actions the screen names.
enum AccountAction: String, CaseIterable, Sendable {
    case billingChange = "billing.change"
}

/// What the host receives when the screen fires an action.
struct AccountEvent: Sendable, Equatable {
    var action: AccountAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses.
struct AccountTheme: Sendable {
}

struct AccountScreen: View {
    @Bindable var model: AccountModel
    var theme = AccountTheme()
    var perform: (AccountEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Text("Account")
                .font(.largeTitle)
                .accessibilityHeading(.h1)
                .accessibilityAddTraits(.isHeader)
                .accessibilityIdentifier("title")
            TabView {
                VStack(alignment: .leading) {
                    Text(model.account.name)
                        .accessibilityIdentifier("account-name")
                    Text(model.account.email)
                        .accessibilityIdentifier("account-email")
                }
                .tabItem { Text("Overview") }
                .tag("tab-overview")
                .accessibilityElement(children: .contain)
                .accessibilityIdentifier("tab-overview")
                VStack(alignment: .leading) {
                    Text(model.billing.plan)
                        .accessibilityIdentifier("plan")
                    Button {
                        send(.billingChange, "change-plan")
                    } label: {
                        Text("Change plan")
                    }
                    .buttonStyle(.borderedProminent)
                    .accessibilityIdentifier("change-plan")
                }
                .tabItem { Text("Billing") }
                .tag("tab-billing")
                .accessibilityElement(children: .contain)
                .accessibilityIdentifier("tab-billing")
                VStack(alignment: .leading) {
                    List {
                        ForEach(Array(model.team.enumerated()), id: \.offset) { memberIndex, member in
                            HStack {
                                Text(member.name)
                                    .accessibilityIdentifier("member-name")
                            }
                            .accessibilityElement(children: .contain)
                            .accessibilityIdentifier("member")
                        }
                        .weftEach("members-each")
                    }
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("members")
                }
                .tabItem { Text("Team") }
                .tag("tab-team")
                .accessibilityElement(children: .contain)
                .accessibilityIdentifier("tab-team")
            }
            .accessibilityLabel("Account sections")
            .accessibilityIdentifier("tabs")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Account")
        .accessibilityIdentifier("account")
    }

    private func send(_ action: AccountAction, _ id: String, item: String? = nil) {
        perform(AccountEvent(action: action, id: id, item: item))
    }
}

#Preview {
    AccountScreen(model: AccountModel())
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}
